# taris-agent

./: .env.example  .gitignore  LICENSE  langgraph.json  pyproject.toml
src/common/: document_parsers.py
src/react_agent/: context.py  graph.py  prompts.py  utils.py
src/web/: main.py
src/web/config/: __init__.py  settings.py
src/web/controllers/: __init__.py  admin_controller.py  auth_controller.py  domains_controller.py  library_controller.py  news_controller.py  paper_controller.py  system_controller.py  tags_controller.py
src/web/middleware/: __init__.py  auth_middleware.py
src/web/models/: __init__.py  domain.py  dto.py
src/web/repositories/: __init__.py  base.py  library_repository.py  news_repository.py  paper_repository.py  user_repository.py
src/web/services/: __init__.py  admin_service.py  auth_service.py  library_service.py  news_service.py  paper_service.py
src/web/utils/: __init__.py  database.py
